# Generated by Django 5.2.8 on 2026-02-03 00:11

import django.contrib.auth.models
import django.contrib.auth.validators
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("auth", "0012_alter_user_first_name_max_length"),
    ]

    operations = [
        migrations.CreateModel(
            name="User",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("password", models.CharField(max_length=128, verbose_name="password")),
                (
                    "last_login",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="last login"
                    ),
                ),
                (
                    "is_superuser",
                    models.BooleanField(
                        default=False,
                        help_text="Designates that this user has all permissions without explicitly assigning them.",
                        verbose_name="superuser status",
                    ),
                ),
                (
                    "username",
                    models.CharField(
                        error_messages={
                            "unique": "A user with that username already exists."
                        },
                        help_text="Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.",
                        max_length=150,
                        unique=True,
                        validators=[
                            django.contrib.auth.validators.UnicodeUsernameValidator()
                        ],
                        verbose_name="username",
                    ),
                ),
                (
                    "first_name",
                    models.CharField(
                        blank=True, max_length=150, verbose_name="first name"
                    ),
                ),
                (
                    "last_name",
                    models.CharField(
                        blank=True, max_length=150, verbose_name="last name"
                    ),
                ),
                (
                    "is_staff",
                    models.BooleanField(
                        default=False,
                        help_text="Designates whether the user can log into this admin site.",
                        verbose_name="staff status",
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(
                        default=True,
                        help_text="Designates whether this user should be treated as active. Unselect this instead of deleting accounts.",
                        verbose_name="active",
                    ),
                ),
                (
                    "date_joined",
                    models.DateTimeField(
                        default=django.utils.timezone.now, verbose_name="date joined"
                    ),
                ),
                (
                    "email",
                    models.EmailField(
                        help_text="Email address - must be unique across all users",
                        max_length=254,
                        unique=True,
                    ),
                ),
                (
                    "groups",
                    models.ManyToManyField(
                        blank=True,
                        help_text="The groups this user belongs to. A user will get all permissions granted to each of their groups.",
                        related_name="user_set",
                        related_query_name="user",
                        to="auth.group",
                        verbose_name="groups",
                    ),
                ),
                (
                    "user_permissions",
                    models.ManyToManyField(
                        blank=True,
                        help_text="Specific permissions for this user.",
                        related_name="user_set",
                        related_query_name="user",
                        to="auth.permission",
                        verbose_name="user permissions",
                    ),
                ),
            ],
            options={
                "verbose_name": "User",
                "verbose_name_plural": "Users",
            },
            managers=[
                ("objects", django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name="Organization",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "name",
                    models.CharField(help_text="Organization name", max_length=255),
                ),
                (
                    "slug",
                    models.SlugField(help_text="URL-friendly identifier", unique=True),
                ),
                (
                    "domain",
                    models.CharField(
                        blank=True,
                        help_text="Organization domain (e.g., example.com) - must be unique",
                        max_length=255,
                        null=True,
                        unique=True,
                    ),
                ),
                ("description", models.TextField(blank=True, null=True)),
                (
                    "contact_email",
                    models.EmailField(blank=True, max_length=254, null=True),
                ),
                (
                    "contact_phone",
                    models.CharField(blank=True, max_length=20, null=True),
                ),
                ("website", models.URLField(blank=True, null=True)),
                ("country", models.CharField(blank=True, max_length=100, null=True)),
                ("state", models.CharField(blank=True, max_length=100, null=True)),
                ("city", models.CharField(blank=True, max_length=100, null=True)),
                ("address", models.TextField(blank=True, null=True)),
                ("postal_code", models.CharField(blank=True, max_length=20, null=True)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("is_active", models.BooleanField(default=True)),
                (
                    "owner",
                    models.ForeignKey(
                        help_text="Organization owner",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="owned_organizations",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="OrganizationMember",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "role",
                    models.CharField(
                        choices=[
                            ("owner", "Owner"),
                            ("admin", "Administrator"),
                            ("manager", "Manager"),
                            ("member", "Member"),
                            ("viewer", "Viewer"),
                        ],
                        default="member",
                        max_length=20,
                    ),
                ),
                ("can_edit_projects", models.BooleanField(default=False)),
                ("can_delete_projects", models.BooleanField(default=False)),
                ("can_manage_team", models.BooleanField(default=False)),
                ("can_manage_settings", models.BooleanField(default=False)),
                ("joined_at", models.DateTimeField(auto_now_add=True)),
                ("is_active", models.BooleanField(default=True)),
                (
                    "invited_by",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="invitations_sent",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
                (
                    "organization",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="organization_members",
                        to="users.organization",
                    ),
                ),
                (
                    "user",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="organization_memberships",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="RequestSubmission",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "request_type",
                    models.CharField(
                        choices=[
                            ("request_demo", "Request a Demo"),
                            ("general_enquiries", "General Enquiries"),
                            ("run_model_analysis", "Run Model Analysis"),
                            ("compliance_validation", "Compliance Validation"),
                            ("other", "Other"),
                        ],
                        help_text="Type of request",
                        max_length=25,
                    ),
                ),
                ("firstname", models.CharField(help_text="First name", max_length=100)),
                ("lastname", models.CharField(help_text="Last name", max_length=100)),
                (
                    "email",
                    models.EmailField(
                        help_text="Email address", max_length=254, unique=True
                    ),
                ),
                (
                    "company_name",
                    models.CharField(help_text="Company name", max_length=200),
                ),
                ("company_address", models.TextField(help_text="Company address")),
                ("country", models.CharField(help_text="Country", max_length=100)),
                (
                    "sector",
                    models.CharField(help_text="Industry sector", max_length=100),
                ),
                ("job_title", models.CharField(help_text="Job title", max_length=150)),
                (
                    "company_position",
                    models.CharField(
                        blank=True,
                        help_text="Position/role in the company (e.g., Manager, Director, Executive)",
                        max_length=150,
                        null=True,
                    ),
                ),
                (
                    "phone_number",
                    models.CharField(help_text="Phone number", max_length=20),
                ),
                (
                    "additional_details",
                    models.TextField(
                        blank=True, help_text="Additional details or message", null=True
                    ),
                ),
                (
                    "consent_marketing",
                    models.BooleanField(
                        default=False,
                        help_text="Consent to receive marketing communications",
                    ),
                ),
                (
                    "consent_privacy",
                    models.BooleanField(
                        default=False, help_text="Consent to privacy policy"
                    ),
                ),
                (
                    "email_sent",
                    models.BooleanField(
                        default=False,
                        help_text="Flag indicating if notification email was sent successfully",
                    ),
                ),
                (
                    "admin_response",
                    models.TextField(
                        blank=True,
                        help_text="Admin's response message to the user",
                        null=True,
                    ),
                ),
                (
                    "admin_response_sent",
                    models.BooleanField(
                        default=False,
                        help_text="Flag indicating if admin response was sent to user",
                    ),
                ),
                (
                    "onboarding_email_sent",
                    models.BooleanField(
                        default=False,
                        help_text="Flag indicating if onboarding email was sent to user",
                    ),
                ),
                (
                    "project_params",
                    models.JSONField(
                        blank=True,
                        default=dict,
                        help_text="IFC generation parameters (project spec) submitted via GenerateModelPage",
                        null=True,
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                (
                    "onboarded_user",
                    models.OneToOneField(
                        blank=True,
                        help_text="User account created from this request",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
        ),
        migrations.AddIndex(
            model_name="organization",
            index=models.Index(
                fields=["owner", "is_active"], name="auth_org_owner_active_idx"
            ),
        ),
        migrations.AddIndex(
            model_name="organization",
            index=models.Index(fields=["slug"], name="auth_org_slug_idx"),
        ),
        migrations.AddIndex(
            model_name="organizationmember",
            index=models.Index(
                fields=["organization", "user", "is_active"],
                name="auth_org_user_active_idx",
            ),
        ),
        migrations.AlterUniqueTogether(
            name="organizationmember",
            unique_together={("organization", "user")},
        ),
        migrations.AddIndex(
            model_name="requestsubmission",
            index=models.Index(
                fields=["request_type", "created_at"],
                name="users_reque_request_61a49a_idx",
            ),
        ),
        migrations.AddIndex(
            model_name="requestsubmission",
            index=models.Index(fields=["email"], name="users_reque_email_34aa82_idx"),
        ),
    ]
